---
source: src/tests/trusted.rs
expression: json
---
{
  "conclusion": "fail (vetting)",
  "failures": [
    {
      "name": "transitive-third-party1",
      "version": "10.0.0",
      "missing_criteria": [
        "safe-to-deploy"
      ]
    }
  ],
  "suggest": {
    "suggestions": [
      {
        "name": "transitive-third-party1",
        "notable_parents": "third-party1",
        "suggested_criteria": [
          "safe-to-deploy"
        ],
        "suggested_diff": {
          "from": null,
          "to": "5.0.0",
          "diffstat": {
            "insertions": 25,
            "deletions": 0,
            "files_changed": 1
          }
        }
      }
    ],
    "suggest_by_criteria": {
      "safe-to-deploy": [
        {
          "name": "transitive-third-party1",
          "notable_parents": "third-party1",
          "suggested_criteria": [
            "safe-to-deploy"
          ],
          "suggested_diff": {
            "from": null,
            "to": "5.0.0",
            "diffstat": {
              "insertions": 25,
              "deletions": 0,
              "files_changed": 1
            }
          }
        }
      ]
    },
    "total_lines": 25
  }
}
